--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+# Ignore Unity's Library folder (including large files in PackageCache)
+Library/
+
+# Ignore specific file types that are too large
+*.dll
+*.dylib
+*.so
+
